--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.11",
+    "nuqs": "^1.19.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.11"
+    "remeda": "^2.12.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@karl-run/prettier-config": "^1.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  },
+  "prettier": "@karl-run/prettier-config"
 }
